--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "swiper": "^11.1.4",
     "tailwind-hamburgers": "^1.3.5"
   },
   "devDependencies": {
